src/main/java/com/example/econoforestbe/global/config/response/error/exception/BusinessException.java
package com.example.econoforestbe.global.config.response.error.exception;

import com.example.econoforestbe.global.config.response.error.ErrorCode;
import lombok.Getter;

@Getter
public class BusinessException extends RuntimeException {

    private ErrorCode errorCode;

    public BusinessException(ErrorCode errorCode) {
        super(errorCode.getMessage());
        this.errorCode = errorCode;
    }
}
